--- a/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/KeyBox.fxml
+++ b/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/KeyBox.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.HBox?>
 <?import pl.marcinchwedczuk.rfid.gui.MaskedTextField?>
@@ -10,6 +10,5 @@
       <tooltip>
          <Tooltip fx:id="validationTooltip" autoHide="true" styleClass="validationTooltip" text="Empty Tooltip" />
       </tooltip></MaskedTextField>
-   <MenuButton fx:id="modeMenu" minWidth="-Infinity" mnemonicParsing="false" styleClass="modeField">
-   </MenuButton>
+   <ChoiceBox fx:id="modeMenu" minWidth="-Infinity" />
 </fx:root>
