--- a/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/CardWindow.fxml
+++ b/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/CardWindow.fxml
@@ -8,25 +8,25 @@
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 <?import pl.marcinchwedczuk.rfid.gui.KeyBox?>
 <?import pl.marcinchwedczuk.rfid.gui.MaskedTextField?>
 
-<AnchorPane prefHeight="929.0" prefWidth="1265.0" stylesheets="@CardWindow.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.marcinchwedczuk.rfid.gui.CardWindow">
+<AnchorPane prefHeight="929.0" prefWidth="1512.0" stylesheets="@CardWindow.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.marcinchwedczuk.rfid.gui.CardWindow">
    <children>
       <Label layoutX="14.0" layoutY="14.0" prefHeight="17.0" prefWidth="54.0" text="Card ID:" />
       <TextField fx:id="cardId" disable="true" editable="false" layoutX="68.0" layoutY="9.0" prefHeight="27.0" prefWidth="155.0" text="AA:BB:CC:DD:EE:FF" />
       <Label layoutX="248.0" layoutY="14.0" prefHeight="17.0" prefWidth="54.0" text="Standard:" />
       <TextField fx:id="cardStandard" disable="true" editable="false" layoutX="312.0" layoutY="9.0" prefHeight="27.0" prefWidth="699.0" AnchorPane.leftAnchor="312.0" AnchorPane.rightAnchor="12.0" />
-      <Label layoutX="14.0" layoutY="53.0" prefHeight="17.0" prefWidth="28.0" text="Key:" />
-      <Label layoutX="288.0" layoutY="54.0" prefHeight="17.0" prefWidth="68.0" text="Use Key As:" />
+      <Label layoutX="44.0" layoutY="54.0" prefHeight="17.0" prefWidth="28.0" text="Key:" />
+      <Label layoutX="312.0" layoutY="55.0" prefHeight="17.0" prefWidth="68.0" text="Use Key As:" />
       <TabPane layoutX="188.0" layoutY="100.0" prefHeight="713.0" prefWidth="784.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="89.0">
         <tabs>
           <Tab text="READ / WRITE">
@@ -38,11 +38,11 @@
                         </TableView>
                         <Spinner fx:id="fromSector" layoutX="14.0" layoutY="87.0" prefHeight="27.0" prefWidth="297.0" />
                         <Label layoutX="14.0" layoutY="64.0" text="From Sector:" />
-                        <Button layoutX="144.0" layoutY="199.0" mnemonicParsing="false" onAction="#readSectors" prefHeight="27.0" prefWidth="167.0" text="READ" />
+                        <Button fx:id="readCardData" layoutX="167.0" layoutY="259.0" mnemonicParsing="false" onAction="#readSectors" prefHeight="40.0" prefWidth="144.0" text="READ" />
                         <Label layoutX="14.0" layoutY="132.0" text="To Sector:" />
                         <Spinner fx:id="toSector" layoutX="14.0" layoutY="149.0" prefHeight="27.0" prefWidth="297.0" />
                         <Button layoutX="15.0" layoutY="199.0" mnemonicParsing="false" onAction="#selectAllSectors" text="Entire Card" />
-                        <Button layoutX="144.0" layoutY="259.0" mnemonicParsing="false" onAction="#writeSectors" prefHeight="27.0" prefWidth="167.0" text="WRITE" />
+                        <Button fx:id="writeCardData" layoutX="14.0" layoutY="259.0" mnemonicParsing="false" onAction="#writeSectors" prefHeight="40.0" prefWidth="135.0" text="WRITE" />
                         <Label layoutX="16.0" layoutY="24.0" text="Display Data As:" />
                         <Button layoutX="19.0" layoutY="592.0" mnemonicParsing="false" onAction="#exportToXml" prefHeight="27.0" prefWidth="167.0" text="EXPORT DATA TO XML" AnchorPane.bottomAnchor="61.0" AnchorPane.leftAnchor="19.0" />
                         <Button layoutX="19.0" layoutY="631.0" mnemonicParsing="false" onAction="#importFromXml" prefHeight="27.0" prefWidth="167.0" text="IMPORT DATA FROM XML" AnchorPane.bottomAnchor="22.0" AnchorPane.leftAnchor="19.0" />
@@ -57,7 +57,7 @@
                      <children>
                         <HBox layoutX="22.0" layoutY="14.0" prefHeight="662.0" prefWidth="1094.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
-                              <Pane prefHeight="662.0" prefWidth="77.0" HBox.hgrow="ALWAYS">
+                              <Pane maxWidth="-Infinity" prefHeight="809.0" prefWidth="559.0" HBox.hgrow="NEVER">
                                  <children>
                                     <Label layoutX="21.0" layoutY="28.0" text="Sector:" />
                                     <MaskedTextField fx:id="secSector" layoutX="71.0" layoutY="23.0" mask="##" prefHeight="26.0" prefWidth="203.0" promptText="Sector" />
@@ -91,19 +91,15 @@
                                                 <Label layoutX="15.0" layoutY="228.0" text="Sector Trailer:" />
                                                 <ChoiceBox fx:id="secTrailerPerms" layoutX="99.0" layoutY="224.0" prefWidth="150.0" styleClass="cbits" />
                                                 <Button layoutX="223.0" layoutY="288.0" mnemonicParsing="false" onAction="#secWriteForSector" text="Write Permissions for Selected Sector" />
-                                                <TextArea editable="false" layoutX="17.0" layoutY="14.0" prefHeight="75.0" prefWidth="483.0" style="-fx-text-fill: red;" text="WARNING: Setting these values incorrectly&#10;may make your card unusable.">
-                                                   <font>
-                                                      <Font name="Monospaced Regular" size="16.0" />
-                                                   </font>
-                                                </TextArea>
                                                 <Button layoutX="15.0" layoutY="288.0" mnemonicParsing="false" onAction="#secWriteForEntireCard" text="Write Permissions for Entire Card" />
+                                                <Label layoutX="15.0" layoutY="14.0" prefHeight="63.0" prefWidth="495.0" styleClass="permWarningText" text="Setting these values incorrectly may make your card unusable." wrapText="true" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" />
                                              </children>
                                           </AnchorPane>
                                       </content>
                                     </TitledPane>
                                  </children>
                               </Pane>
-                              <VBox maxWidth="-Infinity" minWidth="-Infinity" prefHeight="807.0" prefWidth="699.0" HBox.hgrow="NEVER">
+                              <VBox fillWidth="false" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="809.0" prefWidth="711.0" HBox.hgrow="NEVER">
                                  <children>
                                     <TitledPane animated="false" prefHeight="387.0" prefWidth="699.0" text="Access conditions for data  blocks:">
                                       <content>
@@ -133,7 +129,12 @@
         </tabs>
       </TabPane>
       <Button layoutX="854.0" layoutY="48.0" mnemonicParsing="false" onAction="#loadDefaultFactoryKey" text="Load Default Factory Key" AnchorPane.rightAnchor="14.0" />
-      <KeyBox fx:id="key" layoutX="53.0" layoutY="49.0" />
-      <ChoiceBox fx:id="useAsKeyChoiceBox" layoutX="365.0" layoutY="48.0" prefHeight="26.0" prefWidth="96.0" />
+      <KeyBox fx:id="key" layoutX="72.0" layoutY="49.0" />
+      <ChoiceBox fx:id="useAsKeyChoiceBox" layoutX="386.0" layoutY="50.0" prefHeight="26.0" prefWidth="96.0" />
+      <ImageView fitHeight="36.0" fitWidth="41.0" layoutX="5.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@img/key.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
