more small improvements

--- a/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/KeyBox.fxml
+++ b/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/KeyBox.fxml
@@ -6,7 +6,7 @@
 <?import pl.marcinchwedczuk.rfid.gui.MaskedTextField?>
 
 <fx:root stylesheets="@KeyBox.css" type="javafx.scene.layout.HBox" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
-   <MaskedTextField fx:id="keyTextField" styleClass="keyField">
+   <MaskedTextField fx:id="keyTextField" styleClass="keyField" HBox.hgrow="ALWAYS">
       <tooltip>
          <Tooltip fx:id="validationTooltip" autoHide="true" styleClass="validationTooltip" text="Empty Tooltip" />
       </tooltip></MaskedTextField>
