--- a/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/CardWindow.fxml
+++ b/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/CardWindow.fxml
@@ -19,15 +19,15 @@
 <?import pl.marcinchwedczuk.rfid.gui.KeyBox?>
 <?import pl.marcinchwedczuk.rfid.gui.MaskedTextField?>
 
-<AnchorPane prefHeight="929.0" prefWidth="1512.0" stylesheets="@CardWindow.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.marcinchwedczuk.rfid.gui.CardWindow">
+<AnchorPane stylesheets="@CardWindow.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.marcinchwedczuk.rfid.gui.CardWindow">
    <children>
       <Label layoutX="14.0" layoutY="14.0" prefHeight="17.0" prefWidth="54.0" text="Card ID:" />
       <TextField fx:id="cardId" disable="true" editable="false" layoutX="68.0" layoutY="9.0" prefHeight="27.0" prefWidth="155.0" text="AA:BB:CC:DD:EE:FF" />
       <Label layoutX="248.0" layoutY="14.0" prefHeight="17.0" prefWidth="54.0" text="Standard:" />
       <TextField fx:id="cardStandard" disable="true" editable="false" layoutX="312.0" layoutY="9.0" prefHeight="27.0" prefWidth="699.0" AnchorPane.leftAnchor="312.0" AnchorPane.rightAnchor="12.0" />
       <Label layoutX="44.0" layoutY="54.0" prefHeight="17.0" prefWidth="28.0" text="Key:" />
-      <Label layoutX="312.0" layoutY="55.0" prefHeight="17.0" prefWidth="68.0" text="Use Key As:" />
-      <TabPane layoutX="188.0" layoutY="100.0" prefHeight="713.0" prefWidth="784.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="89.0">
+      <Label layoutX="312.0" layoutY="54.0" prefHeight="17.0" prefWidth="68.0" text="Use Key As:" />
+      <TabPane layoutX="188.0" layoutY="100.0" prefHeight="713.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="89.0">
         <tabs>
           <Tab text="READ / WRITE">
             <content>
@@ -55,9 +55,9 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <HBox layoutX="22.0" layoutY="14.0" prefHeight="662.0" prefWidth="1094.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <HBox layoutX="22.0" layoutY="14.0" minHeight="-Infinity" minWidth="-Infinity" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
-                              <Pane maxWidth="-Infinity" prefHeight="809.0" prefWidth="559.0" HBox.hgrow="NEVER">
+                              <Pane minWidth="555.0" HBox.hgrow="NEVER">
                                  <children>
                                     <Label layoutX="21.0" layoutY="28.0" text="Sector:" />
                                     <MaskedTextField fx:id="secSector" layoutX="71.0" layoutY="23.0" mask="##" prefHeight="26.0" prefWidth="203.0" promptText="Sector" />
@@ -68,9 +68,9 @@
                                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="456.0" prefWidth="493.0">
                                              <children>
                                                 <Label layoutX="12.0" layoutY="14.0" text="NOTE: Not readable key will be read as 6 zero bytes.&#10;" />
-                                                <KeyBox fx:id="secKeyA" layoutX="64.0" layoutY="52.0" prefHeight="26.0" prefWidth="202.0" />
+                                                <KeyBox fx:id="secKeyA" layoutX="64.0" layoutY="52.0" prefHeight="26.0" prefWidth="224.0" />
                                                 <Label layoutX="15.0" layoutY="56.0" text="Key A:" />
-                                                <KeyBox fx:id="secKeyB" layoutX="64.0" layoutY="89.0" prefHeight="26.0" prefWidth="202.0" />
+                                                <KeyBox fx:id="secKeyB" layoutX="64.0" layoutY="89.0" prefHeight="26.0" prefWidth="224.0" />
                                                 <Label layoutX="15.0" layoutY="94.0" text="Key B:" />
                                                 <Button layoutX="196.0" layoutY="145.0" mnemonicParsing="false" onAction="#secWriteKeysForSector" text="Change Keys for Selected Sector" />
                                                 <Button layoutX="15.0" layoutY="145.0" mnemonicParsing="false" onAction="#secWriteKeysForEntireCard" text="Change Keys for Entire Card" />
@@ -99,7 +99,7 @@
                                     </TitledPane>
                                  </children>
                               </Pane>
-                              <VBox fillWidth="false" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="809.0" prefWidth="711.0" HBox.hgrow="NEVER">
+                              <VBox fillWidth="false" minWidth="600.0" HBox.hgrow="NEVER">
                                  <children>
                                     <TitledPane animated="false" prefHeight="387.0" prefWidth="699.0" text="Access conditions for data  blocks:">
                                       <content>
@@ -129,8 +129,8 @@
         </tabs>
       </TabPane>
       <Button layoutX="854.0" layoutY="48.0" mnemonicParsing="false" onAction="#loadDefaultFactoryKey" text="Load Default Factory Key" AnchorPane.rightAnchor="14.0" />
-      <KeyBox fx:id="key" layoutX="72.0" layoutY="49.0" />
-      <ChoiceBox fx:id="useAsKeyChoiceBox" layoutX="386.0" layoutY="50.0" prefHeight="26.0" prefWidth="96.0" />
+      <KeyBox fx:id="key" layoutX="72.0" layoutY="49.0" prefWidth="224.0" />
+      <ChoiceBox fx:id="useAsKeyChoiceBox" layoutX="380.0" layoutY="50.0" prefHeight="26.0" prefWidth="96.0" />
       <ImageView fitHeight="36.0" fitWidth="41.0" layoutX="5.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@img/key.png" />
