--- a/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/CardWindow.fxml
+++ b/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/CardWindow.fxml
@@ -4,6 +4,10 @@
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
@@ -23,13 +27,13 @@
 
 <AnchorPane prefHeight="977.0" prefWidth="1280.0" stylesheets="@CardWindow.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.marcinchwedczuk.rfid.gui.CardWindow">
    <children>
-      <Label layoutX="10.0" layoutY="14.0" prefHeight="17.0" prefWidth="68.0" text="Card Name:" />
-      <TextField fx:id="cardId" disable="true" editable="false" layoutX="82.0" layoutY="9.0" prefHeight="27.0" prefWidth="155.0" text="AA:BB:CC:DD:EE:FF" />
-      <Label layoutX="248.0" layoutY="14.0" prefHeight="17.0" prefWidth="54.0" text="Standard:" />
-      <TextField fx:id="cardStandard" disable="true" editable="false" layoutX="308.0" layoutY="9.0" prefHeight="27.0" prefWidth="703.0" AnchorPane.leftAnchor="308.0" AnchorPane.rightAnchor="12.0" />
-      <Label layoutX="44.0" layoutY="54.0" prefHeight="17.0" prefWidth="28.0" text="Key:" />
-      <Label layoutX="312.0" layoutY="54.0" prefHeight="17.0" prefWidth="68.0" text="Use Key As:" />
-      <TabPane layoutX="188.0" layoutY="100.0" prefHeight="713.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="89.0">
+      <Label layoutX="14.0" layoutY="43.0" prefHeight="17.0" prefWidth="68.0" text="Card Name:" />
+      <TextField fx:id="cardId" disable="true" editable="false" layoutX="86.0" layoutY="38.0" prefHeight="27.0" prefWidth="155.0" text="AA:BB:CC:DD:EE:FF" />
+      <Label layoutX="252.0" layoutY="43.0" prefHeight="17.0" prefWidth="54.0" text="Standard:" />
+      <TextField fx:id="cardStandard" disable="true" editable="false" layoutX="312.0" layoutY="38.0" prefHeight="27.0" prefWidth="703.0" AnchorPane.leftAnchor="312.0" AnchorPane.rightAnchor="8.0" />
+      <Label layoutX="48.0" layoutY="83.0" prefHeight="17.0" prefWidth="28.0" text="Key:" />
+      <Label layoutX="316.0" layoutY="83.0" prefHeight="17.0" prefWidth="68.0" text="Use Key As:" />
+      <TabPane layoutX="188.0" layoutY="119.0" prefHeight="858.0" prefWidth="1280.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="119.0">
         <tabs>
           <Tab text="READ / WRITE">
             <content>
@@ -141,13 +145,29 @@
             </Tab>
         </tabs>
       </TabPane>
-      <Button layoutX="854.0" layoutY="48.0" mnemonicParsing="false" onAction="#loadDefaultFactoryKey" text="Load Default Factory Key" AnchorPane.rightAnchor="14.0" />
-      <KeyBox fx:id="key" layoutX="72.0" layoutY="49.0" prefWidth="224.0" />
-      <ChoiceBox fx:id="useAsKeyChoiceBox" layoutX="380.0" layoutY="50.0" prefHeight="26.0" prefWidth="96.0" />
-      <ImageView fitHeight="36.0" fitWidth="41.0" layoutX="5.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true">
+      <Button layoutX="1116.0" layoutY="77.0" mnemonicParsing="false" onAction="#loadDefaultFactoryKey" text="Load Default Factory Key" AnchorPane.rightAnchor="10.0" />
+      <KeyBox fx:id="key" layoutX="76.0" layoutY="78.0" prefWidth="224.0" />
+      <ChoiceBox fx:id="useAsKeyChoiceBox" layoutX="384.0" layoutY="79.0" prefHeight="26.0" prefWidth="96.0" />
+      <ImageView fitHeight="36.0" fitWidth="41.0" layoutX="9.0" layoutY="74.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@img/key.png" />
          </image>
       </ImageView>
+      <MenuBar layoutX="553.0" layoutY="-13.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <menus>
+          <Menu text="_Terminal">
+            <items>
+              <MenuItem onAction="#displayFirmwareVersion" text="Get _firmware version..." />
+                  <SeparatorMenuItem mnemonicParsing="false" />
+                  <MenuItem text="_Settings..." />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Help">
+            <items>
+              <MenuItem onAction="#showAboutDialog" text="_About..." />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
    </children>
 </AnchorPane>
