--- a/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/MainWindow.fxml
+++ b/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/MainWindow.fxml
@@ -3,19 +3,36 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="353.0" prefWidth="622.0" stylesheets="@MainWindow.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.marcinchwedczuk.rfid.gui.MainWindow">
+<AnchorPane prefHeight="370.0" prefWidth="622.0" stylesheets="@MainWindow.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.marcinchwedczuk.rfid.gui.MainWindow">
    <children>
-      <ComboBox fx:id="terminalsList" layoutX="72.0" layoutY="20.0" prefHeight="27.0" prefWidth="454.0" AnchorPane.leftAnchor="72.0" AnchorPane.rightAnchor="89.0" />
-      <Label layoutX="14.0" layoutY="25.0" prefHeight="17.0" prefWidth="58.0" text="Terminal:" AnchorPane.leftAnchor="14.0" />
-      <Button layoutX="537.0" layoutY="20.0" mnemonicParsing="false" onAction="#refreshTerminalList" text="Refresh" AnchorPane.rightAnchor="16.0" />
-      <VBox id="infoPane" alignment="CENTER" layoutX="14.0" layoutY="62.0" prefHeight="229.0" prefWidth="624.0" AnchorPane.leftAnchor="16.0" AnchorPane.rightAnchor="16.0">
+      <ComboBox fx:id="terminalsList" layoutX="73.0" layoutY="39.0" prefHeight="27.0" prefWidth="454.0" AnchorPane.leftAnchor="73.0" AnchorPane.rightAnchor="88.0" />
+      <Label layoutX="15.0" layoutY="44.0" prefHeight="17.0" prefWidth="58.0" text="Terminal:" AnchorPane.leftAnchor="15.0" />
+      <Button layoutX="547.0" layoutY="39.0" mnemonicParsing="false" onAction="#refreshTerminalList" text="Refresh" AnchorPane.rightAnchor="15.5" />
+      <VBox id="infoPane" alignment="CENTER" layoutX="17.0" layoutY="81.0" prefHeight="229.0" prefWidth="624.0" AnchorPane.leftAnchor="17.0" AnchorPane.rightAnchor="15.0">
          <children>
             <Label id="infoText" fx:id="infoScreen" text="Select terminal to start...." />
          </children>
       </VBox>
-      <Button layoutX="481.0" layoutY="304.0" mnemonicParsing="false" onAction="#closeMainWindow" prefHeight="34.0" prefWidth="125.0" text="Close" AnchorPane.rightAnchor="16.0" />
+      <Button layoutX="482.0" layoutY="323.0" mnemonicParsing="false" onAction="#closeMainWindow" prefHeight="34.0" prefWidth="125.0" text="Close" AnchorPane.rightAnchor="15.0" />
+      <MenuBar layoutX="199.0" layoutY="1.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <menus>
+          <Menu mnemonicParsing="false" text="Terminal">
+            <items>
+              <MenuItem mnemonicParsing="false" onAction="#test" text="Test" />
+            </items>
+          </Menu>
+            <Menu mnemonicParsing="false" text="Help">
+               <items>
+                  <MenuItem mnemonicParsing="false" onAction="#showAboutDialog" text="About" />
+               </items>
+            </Menu>
+        </menus>
+      </MenuBar>
    </children>
 </AnchorPane>
