--- a/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/AboutWindow.fxml
+++ b/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/AboutWindow.fxml
@@ -2,20 +2,19 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.paint.LinearGradient?>
-<?import javafx.scene.paint.Stop?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
+<?import javafx.scene.text.TextFlow?>
 
-<HBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.marcinchwedczuk.rfid.gui.AboutWindow">
+<HBox fx:id="parentHBox" alignment="CENTER" stylesheets="@AboutWindow.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.marcinchwedczuk.rfid.gui.AboutWindow">
    <children>
-      <ImageView fitHeight="403.0" fitWidth="503.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="NEVER">
+      <ImageView fx:id="leftLogo" fitHeight="450.0" pickOnBounds="true" preserveRatio="true">
          <HBox.margin>
             <Insets />
          </HBox.margin>
@@ -23,58 +22,37 @@
             <Image url="@img/about-tag.jpeg" />
          </image>
       </ImageView>
-      <Pane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
+      <VBox fx:id="contentVBox" styleClass="contentBox" HBox.hgrow="ALWAYS">
          <children>
-            <Text layoutX="15.0" layoutY="91.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Created by 0xmarcin&#10;GitHub:  github.com/marcin-chwedczuk/rfid&#10;&#10;Huge thanks to Sanga Chidam YT Channel&#10;for great explanation how RFID cards work.&#10;" wrappingWidth="343.21630859375" />
-            <Button defaultButton="true" layoutX="253.0" layoutY="363.0" mnemonicParsing="false" onAction="#closeWindow" prefHeight="26.0" prefWidth="106.0" text="OK" />
-            <Label layoutX="9.0" layoutY="14.0" text="RFID Tag Editor v0.1">
-               <textFill>
-                  <LinearGradient endX="1.0" endY="1.0">
-                     <stops>
-                        <Stop>
-                           <color>
-                              <Color red="0.9671052694320679" green="0.20148026943206787" blue="0.852261483669281" />
-                           </color>
-                        </Stop>
-                        <Stop offset="1.0">
-                           <color>
-                              <Color red="0.23026315867900848" green="0.042641326785087585" blue="0.19586582481861115" />
-                           </color>
-                        </Stop>
-                     </stops>
-                  </LinearGradient>
-               </textFill>
-               <font>
-                  <Font name="Comic Sans MS" size="36.0" />
-               </font>
-            </Label>
-            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="132.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@img/about-ani.gif" />
-               </image>
-            </ImageView>
-            <Label fx:id="javaFxLabel" layoutX="23.0" layoutY="243.0" text="JavaFX">
-               <textFill>
-                  <LinearGradient endX="1.0" endY="1.0">
-                     <stops>
-                        <Stop>
-                           <color>
-                              <Color red="0.9671052694320679" green="0.20148026943206787" blue="0.852261483669281" />
-                           </color>
-                        </Stop>
-                        <Stop offset="1.0">
-                           <color>
-                              <Color red="0.23026315867900848" green="0.042641326785087585" blue="0.19586582481861115" />
-                           </color>
-                        </Stop>
-                     </stops>
-                  </LinearGradient>
-               </textFill>
-               <font>
-                  <Font name="Comic Sans MS" size="36.0" />
-               </font>
-            </Label>
+            <Label styleClass="hugeText" text="RFID Tag Editor v0.1" />
+            <Separator styleClass="contentSeparator" />
+            <TextFlow>
+               <children>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Created by 0xmarcin&#10;" />
+                  <Label text="GitHub: " />
+                  <Hyperlink onAction="#openApplicationGitHubPage" styleClass="no-border" text="github.com/marcin-chwedczuk/rfid" />
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="&#10;&#10;Huge thanks to" />
+                  <Hyperlink onAction="#openSangaYTChannel" styleClass="no-border" text="Sanga Chidam YT Channel" />
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="&#10;for great explanation how RFID cards work." />
+               </children>
+            </TextFlow>
+            <Separator styleClass="contentSeparator" />
+            <HBox alignment="CENTER">
+               <children>
+                  <Label fx:id="javaFxLabel" styleClass="hugeText" text="JavaFX" />
+                  <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@img/about-ani.gif" />
+                     </image>
+                  </ImageView>
+               </children>
+            </HBox>
+            <HBox alignment="BOTTOM_RIGHT" styleClass="buttonBox" VBox.vgrow="ALWAYS">
+               <children>
+                  <Button cancelButton="true" defaultButton="true" mnemonicParsing="false" onAction="#closeWindow" prefHeight="26.0" prefWidth="106.0" text="OK" />
+               </children>
+            </HBox>
          </children>
-      </Pane>
+      </VBox>
    </children>
 </HBox>
