--- a/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/MainWindow.fxml
+++ b/app/src/main/resources/pl/marcinchwedczuk/rfid/gui/MainWindow.fxml
@@ -6,33 +6,72 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="370.0" prefWidth="622.0" stylesheets="@MainWindow.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.marcinchwedczuk.rfid.gui.MainWindow">
+<AnchorPane stylesheets="@MainWindow.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.marcinchwedczuk.rfid.gui.MainWindow">
    <children>
-      <ComboBox fx:id="terminalsList" layoutX="73.0" layoutY="39.0" prefHeight="27.0" prefWidth="454.0" AnchorPane.leftAnchor="73.0" AnchorPane.rightAnchor="88.0" />
-      <Label layoutX="15.0" layoutY="44.0" prefHeight="17.0" prefWidth="58.0" text="Terminal:" AnchorPane.leftAnchor="15.0" />
-      <Button layoutX="547.0" layoutY="39.0" mnemonicParsing="false" onAction="#refreshTerminalList" text="Refresh" AnchorPane.rightAnchor="15.5" />
-      <VBox id="infoPane" alignment="CENTER" layoutX="17.0" layoutY="81.0" prefHeight="229.0" prefWidth="624.0" AnchorPane.leftAnchor="17.0" AnchorPane.rightAnchor="15.0">
+      <GridPane layoutX="11.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="10.0" minWidth="10.0" prefWidth="10.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="10.0" minWidth="10.0" prefWidth="10.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="10.0" minHeight="10.0" prefHeight="10.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="-Infinity" minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="10.0" minHeight="10.0" prefHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="-Infinity" minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="10.0" minHeight="10.0" prefHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="-Infinity" minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="10.0" minHeight="10.0" prefHeight="10.0" vgrow="SOMETIMES" />
+        </rowConstraints>
          <children>
-            <Label id="infoText" fx:id="infoScreen" text="Select terminal to start...." />
+            <VBox id="infoPane" alignment="CENTER" minHeight="200.0" minWidth="400.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+               <children>
+                  <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@img/acr122u.png" />
+                     </image>
+                  </ImageView>
+                  <Label id="infoText" fx:id="infoScreen" text="Select terminal to start...." />
+               </children>
+            </VBox>
+            <MenuBar GridPane.columnSpan="2147483647">
+              <menus>
+                  <Menu text="_App">
+                    <items>
+                      <MenuItem onAction="#closeMainWindow" text="E_xit" />
+                    </items>
+                  </Menu>
+                <Menu text="_Terminal">
+                  <items>
+                    <MenuItem onAction="#test" text="Test" />
+                  </items>
+                </Menu>
+                  <Menu text="_Help">
+                     <items>
+                        <MenuItem onAction="#showAboutDialog" text="About..." />
+                     </items>
+                  </Menu>
+              </menus>
+            </MenuBar>
+            <HBox alignment="CENTER_LEFT" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <children>
+                  <Label text="Terminal:" />
+                  <ComboBox fx:id="terminalsList" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS" />
+                  <Button mnemonicParsing="false" onAction="#refreshTerminalList" text="Refresh" />
+               </children>
+            </HBox>
+            <Button mnemonicParsing="false" onAction="#closeMainWindow" prefHeight="34.0" prefWidth="125.0" text="Close" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="6" />
          </children>
-      </VBox>
-      <Button layoutX="482.0" layoutY="323.0" mnemonicParsing="false" onAction="#closeMainWindow" prefHeight="34.0" prefWidth="125.0" text="Close" AnchorPane.rightAnchor="15.0" />
-      <MenuBar layoutX="199.0" layoutY="1.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <menus>
-          <Menu mnemonicParsing="false" text="Terminal">
-            <items>
-              <MenuItem mnemonicParsing="false" onAction="#test" text="Test" />
-            </items>
-          </Menu>
-            <Menu mnemonicParsing="false" text="Help">
-               <items>
-                  <MenuItem mnemonicParsing="false" onAction="#showAboutDialog" text="About" />
-               </items>
-            </Menu>
-        </menus>
-      </MenuBar>
+      </GridPane>
    </children>
 </AnchorPane>
